fix vertical alignment of icons in big-header component

--- a/src/components/header/components/big-header/big-header.scss
+++ b/src/components/header/components/big-header/big-header.scss
@@ -13,7 +13,7 @@ header-component .big .navbar {
     max-width: $lg_breakpoint;
     .logo {
         margin: 0;
-        padding-top: 30px;
+        padding-top: 3em;
         width: 250px;
         cursor: pointer;
         img {
@@ -22,7 +22,7 @@ header-component .big .navbar {
     }
     .bottom {
         margin: 0;
-        padding-top: 30px;
+        padding-top: 2em;
         position: absolute;
         right: 0;
         display: inline-block;
@@ -37,7 +37,7 @@ header-component .big .navbar .bottom .top-menu {
     margin-right:.6em;
     color:#fff;
     ul {
-        margin: 0;
+        margin:0;
         padding: 0;
         background-color: #44bddf;
         border-top-left-radius: -10px;
@@ -53,7 +53,7 @@ header-component .big .navbar .bottom .top-menu {
 }
 header-component .big .navbar .bottom .menus {
     ul {
-        margin: 0;
+        margin: 1em 0;
         padding: 0;  
     }
     ul li {
